# reddish_hermit

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  doxygen.conf  lgtm.yml
.github/workflows/: cmake.yml  codeql-analysis.yml  flawfinder.yml
client/: CMakeLists.txt
client/include/reddish/: kiedis.h  redis.h
client/include/reddish/common/: return_type.h
client/include/reddish/resp/: command.h  request.h  response.h  result.h
client/include/reddish/utils/: convert.h
client/src/: CMakeLists.txt  kiedis.cpp  redis.cpp
client/src/resp/: response.cpp
client/test/: CMakeLists.txt  connection_test.cpp  request_test.cpp
common/: CMakeLists.txt
common/include/common/command/: command.h
common/include/common/network/: connection.h
common/include/common/protocol/: reader.h  resp_data_type.h  writer.h
common/include/common/utils/: convert.h  types.h
common/include/protocol/: reader.h  writer.h
common/src/: CMakeLists.txt
common/src/command/: command.cpp
common/src/connection/: connection.cpp
common/src/protocol/: reader.cpp  writer.cpp
common/src/utils/: convert.cpp
common/test/: CMakeLists.txt
common/test/connection/: connection_test.cpp
include/: redis.h
include/network/: connection.h
include/proto/: read.h  write.h
include/reddish/: redis.h
include/reddish/common/: return_type.h
include/reddish/network/: connection.h
include/reddish/proto/: command.h  proto.h
include/reddish/resp/: command.h  protocol.h  reader.h  request.h  response.h  result.h
include/reddish/utils/: str.h  string.h
include/utils/: default.h  str.h  strconv.h  timer.h
script/: build.sh  build_client.sh  build_server.sh
server/: CMakeLists.txt
server/include/kiedis/: connection.h
server/include/server/commands/: commands.h
server/include/server/kiedis/: connection_handler.h  kiedis.h
server/include/server/storage/: database.h
server/include/storage/: database.h
server/src/: CMakeLists.txt  main.cpp
server/src/commands/: commands.cpp
server/src/kiedis/: connection.cpp  connection_handler.cpp  kiedis.cpp
server/src/storage/: database.cpp
src/: CMakeLists.txt
src/network/: connection.cpp
src/proto/: proto.cpp  read.cpp  write.cpp
src/resp/: protocol.cpp  reader.cpp  request.cpp  response.cpp  result.cpp
src/utils/: default.cpp  str.cpp  strconv.cpp  string.cpp  timer.cpp
test/: CMakeLists.txt  connection_test.cpp  proto_test.cpp  redis_test.cpp  resp_test.cpp  response_test.cpp  utils_test.cpp
